// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table Component should allow expandable cell content: expand cell event 1`] = `
[
  [
    {
      "cellIndex": 0,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "compound",
    },
  ],
]
`;

exports[`Table Component should allow expandable cell content: expanded cell 1`] = `
<tr
  class="pf-v6-c-table__tr curiosity-table__tr pf-v6-c-table__expandable-row pf-m-expanded"
  data-ouia-component-id="OUIA-Generated-TableRow-:ro:"
  data-ouia-component-type="PF6/TableRow"
  data-ouia-safe="true"
>
  <td
    class="pf-v6-c-table__td curiosity-table__td curiosity-table__td-expand-expanded curiosity-table__td-expand-wrapper"
    colspan="1"
    tabindex="-1"
  >
    <div
      class="curiosity-table__td-expand-content"
    >
      <div
        class="pf-v6-c-table__expandable-row-content"
      >
        dolor sit expandable content
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table Component should allow expandable cell content: no expanded cell 1`] = `null`;

exports[`Table Component should allow expandable row content: expand row event 1`] = `
[
  [
    {
      "cellIndex": -1,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow expandable row content: expandable content 1`] = `
<table
  props="{
  "rows": [
    {
      "cells": [
        "dolor"
      ],
      "expandedContent": "dolor sit expandable content",
      "data": {
        "hello": "world"
      }
    },
    {
      "cells": [
        "sit"
      ]
    }
  ],
  "children": []
}"
>
  <div
    class="pf-v6-l-grid"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col"
    >
      <table
        class="curiosity-table  pf-v6-c-table pf-m-grid-md pf-m-compact"
        data-ouia-component-id="OUIA-Generated-Table-:rg:"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <tbody
          class="pf-v6-c-table__tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v6-c-table__tr curiosity-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-:rh:"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v6-c-table__td curiosity-table__td curiosity-table__td-expand pf-v6-c-table__toggle"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                aria-label="Details"
                aria-labelledby="simple-node0 expand-toggle0"
                class="pf-v6-c-button pf-m-plain pf-m-small"
                data-ouia-component-id="OUIA-Generated-Button-plain-:ri:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="expand-toggle0"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <div
                    class="pf-v6-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                      />
                    </svg>
                  </div>
                </span>
              </button>
            </td>
            <td
              class="pf-v6-c-table__td undefined curiosity-table__td "
              tabindex="-1"
            >
              dolor
            </td>
          </tr>
        </tbody>
        <tbody
          class="pf-v6-c-table__tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v6-c-table__tr curiosity-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-:rj:"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v6-c-table__td curiosity-table__td"
              tabindex="-1"
            />
            <td
              class="pf-v6-c-table__td undefined curiosity-table__td "
              tabindex="-1"
            >
              sit
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</table>
`;

exports[`Table Component should allow expandable row content: expanded row 1`] = `
<tr
  class="pf-v6-c-table__tr curiosity-table__tr pf-v6-c-table__expandable-row pf-m-expanded"
  data-ouia-component-id="OUIA-Generated-TableRow-:rk:"
  data-ouia-component-type="PF6/TableRow"
  data-ouia-safe="true"
>
  <td
    class="pf-v6-c-table__td curiosity-table__td curiosity-table__td-expand-expanded curiosity-table__td-expand-wrapper"
    colspan="2"
    tabindex="-1"
  >
    <div
      class="curiosity-table__td-expand-content"
    >
      <div
        class="pf-v6-c-table__expandable-row-content"
      >
        dolor sit expandable content
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table Component should allow expandable row content: no expanded row 1`] = `null`;

exports[`Table Component should allow selectable row content: select row content 1`] = `
<tr
  class="pf-v6-c-table__tr curiosity-table__tr"
  data-ouia-component-id="OUIA-Generated-TableRow-:r11:"
  data-ouia-component-type="PF6/TableRow"
  data-ouia-safe="true"
>
  <td
    class="pf-v6-c-table__td curiosity-table__td curiosity-table__td-select pf-v6-c-table__check"
    tabindex="-1"
  >
    <div
      class="pf-v6-c-check pf-m-standalone"
    >
      <input
        aria-invalid="false"
        aria-label="Select row 0"
        class="pf-v6-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-:r13:"
        data-ouia-component-type="PF6/Checkbox"
        data-ouia-safe="true"
        id="select-0"
        type="checkbox"
      />
    </div>
  </td>
  <td
    class="pf-v6-c-table__td  curiosity-table__td "
    tabindex="-1"
  >
    dolor
  </td>
</tr>
`;

exports[`Table Component should allow selectable row content: select row input 1`] = `
[
  [
    {
      "data": {
        "dolorSit": "hello world",
      },
      "isSelected": true,
      "rowIndex": 1,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<table
  class="curiosity-table  pf-v6-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-:rp:"
  data-ouia-component-type="PF6/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v6-c-table__thead"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rq:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v6-c-table__th curiosity-table__th pf-v6-c-table__sort"
        scope="col"
        tabindex="-1"
      >
        <button
          class="pf-v6-c-table__button"
          type="button"
        >
          <div
            class="pf-v6-c-table__button-content"
          >
            <span
              class="pf-v6-c-table__text"
            >
              lorem ipsum
            </span>
            <span
              class="pf-v6-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M21.293 23.293 17 27.586V4.414l4.293 4.293a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414l-5.646-5.646a1.5 1.5 0 0 0-2.121 0L9.294 7.293a.999.999 0 1 0 1.414 1.414l4.293-4.293v23.172l-4.293-4.293a.999.999 0 1 0-1.414 1.414l5.646 5.646c.292.293.676.438 1.061.438s.768-.146 1.061-.438l5.646-5.646a.999.999 0 1 0-1.414-1.414Z"
                  />
                </svg>
              </svg>
            </span>
          </div>
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v6-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rr:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        dolor
      </td>
    </tr>
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rs:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow sortable content: sorted 1`] = `
<th
  aria-sort="ascending"
  class="pf-v6-c-table__th curiosity-table__th pf-v6-c-table__sort pf-m-selected"
  scope="col"
  tabindex="-1"
>
  <button
    class="pf-v6-c-table__button"
    type="button"
  >
    <div
      class="pf-v6-c-table__button-content"
    >
      <span
        class="pf-v6-c-table__text"
      >
        lorem ipsum
      </span>
      <span
        class="pf-v6-c-table__sort-indicator"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 256 512"
          >
            <path
              d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M22.707 8.707a.997.997 0 0 1-1.414 0L17 4.414V30a1 1 0 1 1-2 0V4.414l-4.293 4.293a.999.999 0 1 1-1.414-1.414l5.646-5.647a1.501 1.501 0 0 1 2.121 0l5.646 5.646a.999.999 0 0 1 0 1.414Z"
            />
          </svg>
        </svg>
      </span>
    </div>
  </button>
</th>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
<table
  aria-label="lorem ipsum aria-label"
  class="curiosity-table  pf-v6-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-:r8:"
  data-ouia-component-type="PF6/Table"
  data-ouia-safe="true"
  role="grid"
  summary="lorem ipsum summary"
>
  <thead
    class="pf-v6-c-table__thead"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r9:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v6-c-table__th curiosity-table__th"
        scope="col"
        tabindex="-1"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v6-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:ra:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        dolor
      </td>
    </tr>
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rb:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<table
  class="curiosity-table  pf-v6-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-:r4:"
  data-ouia-component-type="PF6/Table"
  data-ouia-safe="true"
  role="grid"
>
  <tbody
    class="pf-v6-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r5:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        dolor
      </td>
    </tr>
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r6:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
<table
  class="curiosity-table lorem-ipsum-class pf-v6-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-:rc:"
  data-ouia-component-type="PF6/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v6-c-table__thead"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rd:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v6-c-table__th curiosity-table__th"
        scope="col"
        tabindex="-1"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v6-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:re:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        dolor
      </td>
    </tr>
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:rf:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<table
  class="curiosity-table  pf-v6-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-:r0:"
  data-ouia-component-type="PF6/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v6-c-table__thead"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r1:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v6-c-table__th curiosity-table__th"
        scope="col"
        tabindex="-1"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v6-c-table__tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r2:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        dolor
      </td>
    </tr>
    <tr
      class="pf-v6-c-table__tr curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-:r3:"
      data-ouia-component-type="PF6/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v6-c-table__td undefined curiosity-table__td "
        tabindex="-1"
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<table
  props="{
  "children": [
    {}
  ],
  "isHeader": true,
  "columnHeaders": [
    "lorem ipsum"
  ],
  "rows": []
}"
>
  <div
    class="pf-v6-l-grid"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col"
    >
      Loading...
    </div>
  </div>
</table>
`;

exports[`Table Component should pass child components, nodes when there are no rows: default 1`] = `
<table
  props="{
  "children": [],
  "isHeader": true,
  "columnHeaders": [
    "lorem ipsum"
  ],
  "rows": [],
  "ariaLabelTable": "Dolor sit label",
  "summary": "Lorem ipsum summary"
}"
>
  <div
    class="pf-v6-l-grid"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col"
    >
      <div
        class="ins-c-table__empty"
      >
         
        <table
          aria-label="Dolor sit label"
          class=""
          summary="Lorem ipsum summary"
        />
        <div
          class="pf-v6-c-empty-state pf-m-sm fadein"
        >
          <div
            class="pf-v6-c-empty-state__content"
          >
            <div
              class="pf-v6-c-empty-state__header"
            >
              <div
                class="pf-v6-c-empty-state__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </div>
              <div
                class="pf-v6-c-empty-state__title"
              >
                <h2
                  class="pf-v6-c-empty-state__title-text"
                >
                  No results found
                </h2>
              </div>
            </div>
            <div
              class="pf-v6-c-empty-state__body"
            >
              Clear all filters and try again
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</table>
`;

exports[`Table Component should render a basic component: basic 1`] = `
<table
  props="{
  "isHeader": true,
  "columnHeaders": [
    "lorem",
    "ipsum",
    "dolor",
    "sit"
  ],
  "children": []
}"
>
  <div
    class="pf-v6-l-grid"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col"
    >
      <div
        class="ins-c-table__empty"
      >
         
        <table
          class=""
        />
        <div
          class="pf-v6-c-empty-state pf-m-sm fadein"
        >
          <div
            class="pf-v6-c-empty-state__content"
          >
            <div
              class="pf-v6-c-empty-state__header"
            >
              <div
                class="pf-v6-c-empty-state__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </div>
              <div
                class="pf-v6-c-empty-state__title"
              >
                <h2
                  class="pf-v6-c-empty-state__title-text"
                >
                  No results found
                </h2>
              </div>
            </div>
            <div
              class="pf-v6-c-empty-state__body"
            >
              Clear all filters and try again
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</table>
`;
